# pydicom-jpeg-decoder

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
python/pydicom_jpeg_decoder/: __init__.py
tests/: comparision-grid.py  conftest.py  edge-cases.py  jpeg.py  performance.py  pylibjpeg_data.py
tests/edge-cases/: claims-to-be-rgb-but-is-not.dcm
