[package]
name = "pydicom-jpeg-decoder"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pydicom_jpeg_decoder"
crate-type = ["cdylib"]

[dependencies]
jpeg-decoder = { path = "vendor/jpeg-decoder" }
pyo3 = "0.27.0"
